--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 </head>
 <body>
     <div class="greetings">
-        <span>M</span>
-        <span>I</span>
-        <span>S</span>
-        <span>E</span>
+        <span>F</span>
         <span>L</span>
+        <span>O</span>
+        <span>W</span>
     </div>
     <div class="description">
         <span>Happy Birthday Sayang!</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Click Here Sayang</a>
+            <a href="flower.html">Click Here bubub</a>
         </button>
         
     </div>
