--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span>W</span>
     </div>
     <div class="description">
-        <span>Happy Birthday Sayang!</span>
+        <span>Bubub Floww!</span>
     </div>
     <div class="button">
         <button>
